# snekbox

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  Dockerfile.pydis  LICENSE-THIRD-PARTY  Makefile  NOTICE  Pipfile  README.md  azure-pipelines.yml  config.py  deployment.yaml  deployment.yml  docker-compose.yml  executor.py  filter.yml  nsjail.patch  pyproject.toml  rmq.py  snekbox.cfg  snekbox.py  snekweb.py  tox.ini  upgrade.py
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yaml
.github/workflows/: build.yaml  deploy.yaml  lint-test-build-push.yaml  lint-test.yaml  lint.yaml  main.yaml  sentry_release.yaml  test.yaml
binaries/: nsjail  nsjail2.6-ubuntu-x86_64
ci/: build.yml  lint-test.yml  push.yml  setup.yml
config/: .ignore  gunicorn.conf.py  snekbox.cfg  unixcmd.cfg  versions-light.json  versions.json
docker/: .profile  Dockerfile  Dockerfile.webapp  base.Dockerfile  bionic.Dockerfile  ci.Dockerfile  test.Dockerfile  venv.Dockerfile  xenial.Dockerfile
requirements/: coverage.in  coverage.pip  coveralls.in  coveralls.pip  eval-deps.pip  lint.in  lint.pip  pip-tools.in  pip-tools.pip  requirements.in  requirements.pip
rmq/: consumer.py  publisher.py
runner/: config.py  consume.py  publish.py  test.py
scripts/: .profile  build_python.sh  check_dockerfiles.sh  ci.sh  deploy.sh  dev.sh  in.Dockerfile  install_eval_deps.sh  protoc.py  protoc.sh  python_version.py  set_versions.py  test.sh  version.py
snekbox/: __init__.py  __main__.py  config.py  config_pb2.py  consume.py  filesystem.py  libmount.py  memfs.py  nsjail.py  process.py  publish.py  result.py  snekio.py
snekbox/api/: __init__.py  app.py  snekapi.py
snekbox/api/middleware/: __init__.py  logger.py
snekbox/api/resources/: __init__.py  eval.py  info.py  unixcmd.py
snekbox/limits/: __init__.py
snekbox/logging/: __init__.py  gunicorn.py
snekbox/site/: snekapp.py
snekbox/site/templates/: index.html  result.html
snekbox/snekio/: __init__.py  attachment.py  errors.py  memfs.py
snekbox/utils/: __init__.py  cgroup.py  gunicorn.py  iter.py  logging.py  swap.py  timed.py
templates/: index.html
tests/: .flake8  gunicorn_utils.py  test_filesystem.py  test_filter.py  test_integration.py  test_libmount.py  test_main.py  test_memfs.py  test_nsjail.py  test_snekbox.py  test_timed.py
tests/api/: __init__.py  test_eval.py  test_unixcmd.py
tests/limits/: test_timed.py
tests/nsjail/: __init__.py  test_python3.py  test_unix.py
tests/snekio/: test_filesystem.py  test_memfs.py  test_snekio.py
webapp/: rmq.py  webapp.py
webapp/templates/: index.html
wheels/: typed_ast-1.4.0-cp35-cp35m-manylinux1_x86_64.whl
